# dataclass_utils

./: .dockerignore  .gitignore  BUILD  Dockerfile  LICENSE  Makefile  README.md  WORKSPACE  bazel-bin  bazel-dataclass_utils  bazel-out  bazel-testlogs  pyproject.toml  pyrightconfig.json  requirements.txt  requirements_lock.txt  test.py  tox.ini
.github/workflows/: python-package.yml
dataclass_utils/: __init__.py  error.py  into_dataclass.py  type_checker.py  typing.py
dataclass_utils/_internal/: shared.py
examples/: example.py  example_pep585.py
scripts/: test.py
test/: test_into_dataclass.py  test_main.py  test_pep585.py  test_type_checker.py  utils.py
tests/: test_into_dataclass.py  test_main.py  test_pep604.py  test_type_checker.py  utils.py
