[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dataclass_utils"
version = "0.5.0"
description = ""
authors = [ "Yohei Tamura <tamuhey@gmail.com>",]

[tool.versionup]
tag = true
commit = true
files = [ "dataclass_utils/VERSION.py",]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"
mypy = "^0.800"
isort = "^5.7.0"
autoflake = "^1.4"
